# sunberry

./: .gitignore  Cargo.toml  README.md  boot_config.txt  boot_firmware_config.txt  database.db-journal  packages.txt  rc.local
collector/: Cargo.toml
collector/src/: main.rs
project/: Cargo.toml
project/collector/: Cargo.toml  deploy
project/collector/.cargo/: config.toml
project/common/src/: common.rs
project/webserver/: Cargo.toml  deploy
project/webserver/markdown/: links.md
project/webserver/src/: main.rs
project/webserver/src/pages/: mdpage.rs
project/webserver/static/css/: base.css
project/webserver/templates/: mdpage.html
projects/: Cargo.toml
projects/collector/: Cargo.toml  deploy
projects/collector/src/: db_insert.rs  main.rs  measure.rs  tables.rs
projects/general/: Cargo.toml
projects/general/src/: ezlogger.rs  lib.rs  predef.rs
projects/shared/: Cargo.toml
projects/shared/src/: dbstructs.rs  lib.rs
projects/webserver/: Cargo.toml  deploy
projects/webserver/.cargo/: config.toml
projects/webserver/markdown/: best_practices.md  book.md  fauna.md  flora.md  funga.md  gestein.md  home.md  mein-wanderstein.md  notes.md  wandersteine.md
projects/webserver/src/: main.rs  pages.rs
projects/webserver/src/pages/: api.rs  apiv1.rs  home.rs  mdpage.rs  other.rs  stats.rs  system.rs  systeminfo.rs
projects/webserver/static/css/: base.css  home.css  system.css
projects/webserver/static/js/: base.js  home.js  systemcharts.js
projects/webserver/templates/: base.html  home.html  mdpage.html  stats.html  system.html  systeminfo.html
services/: noip2.service  sunberry_webserver.service
src/: index.rs  main.rs  stats.rs
static/css/: base.css  main.css
system/: apt-packages.txt  motd  setup.sh
system/services/: sunberry_collector.service
templates/: base.html  index.html  stats.html  user.html
webserver/: Cargo.toml
webserver/content/: notes.md
webserver/md/: best_practices.md  links.md
webserver/src/: main.rs  notes.rs  pages.rs  stats.rs
webserver/src/pages/: index.rs  links.rs  mdpage.rs
webserver/templates/: base.html  index.html  links.html  notes.html  stats.html
