[package]
name = "projects"
version = "0.1.0"
edition = "2021"
authors = ["felixmark"]

[workspace]
members = ["collector", "webserver", "general"]

[[bin]]
name = "collector"
path = "collector/src/main.rs"

[[bin]]
name = "webserver"
path = "webserver/src/main.rs"

[lib]
name = "general"
path = "general/src/lib.rs"
