[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
askama = "0.12"
actix-web = "4"
actix-files = "0.6.5"
actix-web-lab = "0.20.2"
sysinfo = "0.30.12"
markdown = "1.0.0-alpha.17"
tokio = { version= "1.38.0", features = ["fs"] }

[build-dependencies]
askama = "0.12"
