[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
general = { path = "../general" }
log = "0.4.21"
env_logger = "0.11.3"
askama = { version = "0.12", features = ["markdown"] }
actix-web = "4"
actix-files = "0.6.5"
actix-web-lab = "0.20.2"
sysinfo = "0.30.12"
tokio = { version= "1.38.0", features = ["fs"] }
dotenvy = "0.15.7"

[build-dependencies]
askama = "0.12"
