[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
askama = { version = "0.12", features = ["markdown", "with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
askama = "0.12"
