[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
shared = { path = "../shared" }
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
askama = { version = "0.12", features = ["markdown", "with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.203" }
serde_json = "1.0.117"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
lazy_static = "1.4.0"
chrono = "0.4.38"

[build-dependencies]
askama = "0.12"
